# zurihac-2024-ghc-wasm

./: .gitignore  README.md  build.sh  cabal.project  package.json  wasm-sim.cabal
haskell/: Main.hs
src/: index.css  index.html  index.js
