cabal-version: 3.8
name: wasm-sim
version: 0.1.0

common lang
  hs-source-dirs:
      haskell
  default-language:
      GHC2021
  default-extensions:
      RecordWildCards
  build-depends:
    , base

executable wasm-sim
  import:
      lang
  main-is:
      Main.hs
  build-depends:
    , ghc-experimental
    , random
  ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      "-optl-Wl,--export=hs_start"